--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kainovaii/kaino-framework",
+    "name": "itomori/itomori",
     "type": "project",
     "autoload": {
         "psr-4": {
